k8s/ingress-traefik-ndl.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ndl-ingress-https
  namespace: ndl
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ndl.super-sympa.fr`)
      kind: Rule
      services:
        - name: ndl-web-service
          port: 80
  tls:
    secretName: ndl-secret-certificate
